--- a/products.html
+++ b/products.html
@@ -6,182 +6,181 @@
     <link rel="stylesheet" href="css/products.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+          rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="navbar-container">
+<header>
+    <nav>
+        <div class="navbar-container">
 
-                <div class="left-side-navbar">
+            <div class="left-side-navbar">
 
-                    <div class="icon-container">
-                        <a href="index.html">
-                            <h2 class="icon ">Food</h2>
-                            <h2 class="icon icon-blue">delivery</h2>
-                        </a>
-                    </div>
-
-                    <div class="search-input-container">
-                        <input placeholder="Search" type="text">
-                        <a href="#">
-                            <img src="images/searchIcon.png" alt="">
-                        </a>
-                    </div>
+                <div class="icon-container">
+                    <a href="index.html">
+                        <h2 class="icon ">Food</h2>
+                        <h2 class="icon icon-blue">delivery</h2>
+                    </a>
                 </div>
 
-                <div class="right-side-navbar">
-                    <a id="restaurants" href="#">Restaurants</a>
-                    <a id="deals" href="#">Deals</a>
-                    <div class="divider" ></div>
-                    <a id="my-order" href="#">My orders</a>
+                <div class="search-input-container">
+                    <input placeholder="Search" type="text">
                     <a href="#">
-                        <div class="cart-button">
-                            <img src="images/shoppingCartIcon.png" alt="">
-                        </div>
-                    </a>
-                    <a href="profile.html">
-                        <div class="profile-button">
-                            <img src="images/profilePicture.png" alt="">
-                        </div>
-                    </a>
-                    <div id="divider-showed" class="divider"></div>
-                    <a href="#">
-                        <div class="menu-button">
-                            <div class="button-line-icon"></div>
-                            <div class="button-line-icon"></div>
-                            <div class="button-line-icon"></div>
-                        </div>
+                        <img src="images/searchIcon.png" alt="">
                     </a>
                 </div>
             </div>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <div class="discount-container">
-                <img class="left-image-discount" src="images/foodImage1.png" alt="">
-                <img class="right-image-discount" src="images/foodImage2.png" alt="">
-            </div>
 
-            <div class="food-category-container">
-                <div class="food-category">
-                    <a href="#">
-                        <img src="images/foodCategories/pizza.png" alt="">
+            <div class="right-side-navbar">
+                <a id="restaurants" href="#">Restaurants</a>
+                <a id="deals" href="#">Deals</a>
+                <div class="divider"></div>
+                <a id="my-order" href="#">My orders</a>
+                <a href="#">
+                    <div class="cart-button">
+                        <img src="images/shoppingCartIcon.png" alt="">
+                    </div>
+                </a>
+                <a href="profile.html">
+                    <div class="profile-button">
+                        <img src="images/profilePicture.png" alt="">
+                    </div>
+                </a>
+                <div id="divider-showed" class="divider"></div>
+                <a href="#">
+                    <div class="menu-button">
+                        <div class="button-line-icon"></div>
+                        <div class="button-line-icon"></div>
+                        <div class="button-line-icon"></div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </nav>
+</header>
+<main>
+    <section class="discount-container">
+        <img class="left-image-discount" src="images/foodImage1.png" alt="">
+        <img class="right-image-discount" src="images/foodImage2.png" alt="">
+    </section>
+
+    <section class="food-category-container">
+        <div class="food-category">
+            <a href="#">
+                <img src="images/foodCategories/pizza.png" alt="">
+                <span>Pizza</span>
+            </a>
+        </div>
+        <div class="food-category">
+            <a href="#">
+                <img src="images/foodCategories/burger.png" alt="">
+                <span>Burger</span>
+            </a>
+        </div>
+        <div class="food-category">
+            <a href="#">
+                <img src="images/foodCategories/bbq.png" alt="">
+                <span>BBQ</span>
+            </a>
+        </div>
+        <div class="food-category">
+            <a href="#">
+                <img src="images/foodCategories/sushi.png" alt="">
+                <span>Sushi</span>
+            </a>
+        </div>
+        <div class="food-category">
+            <a href="#">
+                <img src="images/foodCategories/vegan.png" alt="">
+                <span>Vegan</span>
+            </a>
+        </div>
+        <div class="food-category">
+            <a href="#">
+                <img src="images/foodCategories/desserts.png" alt="">
+                <span>Desserts</span>
+            </a>
+        </div>
+    </section>
+
+    <h1 class="menu-options-label">
+        Nearby restaurants
+    </h1>
+
+    <section class="menu-options-container">
+        <div class="menu-option">
+            <img src="images/foodOptions/royalSushi.png" alt="">
+            <div class="menu-option-information">
+                <h2>Royal Sushi House</h2>
+                <span>&#x1F551; 30-40 min &nbsp; • &nbsp; $32 min sum</span>
+                <div class="menu-option-category">
+                    <img src="images/foodTypes/sushi.png" alt="">
+                    <span>Sushi</span>
+                </div>
+            </div>
+        </div>
+        <div class="menu-option">
+            <img src="images/foodOptions/burgerAndPizzas.png" alt="">
+            <div class="menu-option-information">
+                <h2>Royal Sushi House</h2>
+                <span>&#x1F551; 30-40 min &nbsp; • &nbsp; $32 min sum</span>
+                <div class="menu-options-category-container">
+                    <div class="menu-option-category">
+                        <img src="images/foodTypes/sushi.png" alt="">
                         <span>Pizza</span>
-                    </a>
-                </div>
-                <div class="food-category">
-                    <a href="#">
-                        <img src="images/foodCategories/burger.png" alt="">
+                    </div>
+                    <div class="menu-option-category">
+                        <img src="images/foodTypes/sushi.png" alt="">
                         <span>Burger</span>
-                    </a>
-                </div>
-                <div class="food-category">
-                    <a href="#">
-                        <img src="images/foodCategories/bbq.png" alt="">
-                        <span>BBQ</span>
-                    </a>
-                </div>
-                <div class="food-category">
-                    <a href="#">
-                        <img src="images/foodCategories/sushi.png" alt="">
-                        <span>Sushi</span>
-                    </a>
-                </div>
-                <div class="food-category">
-                    <a href="#">
-                        <img src="images/foodCategories/vegan.png" alt="">
-                        <span>Vegan</span>
-                    </a>
-                </div>
-                <div class="food-category">
-                    <a href="#">
-                        <img src="images/foodCategories/desserts.png" alt="">
-                        <span>Desserts</span>
-                    </a>
-                </div>
-            </div>
-
-            <h1 class="menu-options-label">
-                Nearby restaurants
-            </h1>
-
-            <div class="menu-options-container">
-                <div class="menu-option">
-                    <img src="images/foodOptions/royalSushi.png" alt="">
-                    <div class="menu-option-information">
-                        <h2>Royal Sushi House</h2>
-                        <span>&#x1F551; 30-40 min &nbsp; • &nbsp; $32 min sum</span>
-                        <div class="menu-option-category">
-                            <img src="images/foodTypes/sushi.png" alt="">
-                            <span>Sushi</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="menu-option">
-                    <img src="images/foodOptions/burgerAndPizzas.png" alt="">
-                    <div class="menu-option-information">
-                        <h2>Royal Sushi House</h2>
-                        <span>&#x1F551; 30-40 min &nbsp; • &nbsp; $32 min sum</span>
-                        <div class="menu-options-category-container">
-                            <div class="menu-option-category">
-                                <img src="images/foodTypes/sushi.png" alt="">
-                                <span>Pizza</span>
-                            </div>
-                            <div class="menu-option-category">
-                                <img src="images/foodTypes/sushi.png" alt="">
-                                <span>Burger</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="menu-option">
-                    <img src="images/foodOptions/ninjaSushi.png" alt="">
-                    <div class="menu-option-information">
-                        <h2>Royal Sushi House</h2>
-                        <span>&#x1F551; 30-40 min &nbsp; • &nbsp; $32 min sum</span>
-                        <div class="menu-option-category">
-                            <img src="images/foodTypes/sushi.png" alt="">
-                            <span>Sushi</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="menu-option">
-                    <img src="images/foodOptions/sushiMaster.png" alt="">
-                    <div class="menu-option-information">
-                        <h2>Royal Sushi House</h2>
-                        <span>&#x1F551; 30-40 min &nbsp; • &nbsp; $32 min sum</span>
-                        <div class="menu-option-category">
-                            <img src="images/foodTypes/sushi.png" alt="">
-                            <span>Sushi</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="menu-option">
-                    <img src="images/foodOptions/japaneseSushi.png" alt="">
-                    <div class="menu-option-information">
-                        <h2>Royal Sushi House</h2>
-                        <span>&#x1F551; 30-40 min &nbsp; • &nbsp; $32 min sum</span>
-                        <div class="menu-option-category">
-                            <img src="images/foodTypes/sushi.png" alt="">
-                            <span>Sushi</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="menu-option">
-                    <img src="images/foodOptions/kobe.png" alt="">
-                    <div class="menu-option-information">
-                        <h2>Royal Sushi House</h2>
-                        <span>&#x1F551; 30-40 min &nbsp; • &nbsp; $32 min sum</span>
-                        <div class="menu-option-category">
-                            <img src="images/foodTypes/sushi.png" alt="">
-                            <span>Sushi</span>
-                        </div>
                     </div>
                 </div>
             </div>
-        </section>
-    </main>
+        </div>
+        <div class="menu-option">
+            <img src="images/foodOptions/ninjaSushi.png" alt="">
+            <div class="menu-option-information">
+                <h2>Royal Sushi House</h2>
+                <span>&#x1F551; 30-40 min &nbsp; • &nbsp; $32 min sum</span>
+                <div class="menu-option-category">
+                    <img src="images/foodTypes/sushi.png" alt="">
+                    <span>Sushi</span>
+                </div>
+            </div>
+        </div>
+        <div class="menu-option">
+            <img src="images/foodOptions/sushiMaster.png" alt="">
+            <div class="menu-option-information">
+                <h2>Royal Sushi House</h2>
+                <span>&#x1F551; 30-40 min &nbsp; • &nbsp; $32 min sum</span>
+                <div class="menu-option-category">
+                    <img src="images/foodTypes/sushi.png" alt="">
+                    <span>Sushi</span>
+                </div>
+            </div>
+        </div>
+        <div class="menu-option">
+            <img src="images/foodOptions/japaneseSushi.png" alt="">
+            <div class="menu-option-information">
+                <h2>Royal Sushi House</h2>
+                <span>&#x1F551; 30-40 min &nbsp; • &nbsp; $32 min sum</span>
+                <div class="menu-option-category">
+                    <img src="images/foodTypes/sushi.png" alt="">
+                    <span>Sushi</span>
+                </div>
+            </div>
+        </div>
+        <div class="menu-option">
+            <img src="images/foodOptions/kobe.png" alt="">
+            <div class="menu-option-information">
+                <h2>Royal Sushi House</h2>
+                <span>&#x1F551; 30-40 min &nbsp; • &nbsp; $32 min sum</span>
+                <div class="menu-option-category">
+                    <img src="images/foodTypes/sushi.png" alt="">
+                    <span>Sushi</span>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
 </body>
 </html>
