--- a/profile.html
+++ b/profile.html
@@ -6,181 +6,196 @@
     <link rel="stylesheet" href="css/profile.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+          rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="navbar-container">
+<header>
+    <nav>
+        <div class="navbar-container">
 
-                <div class="left-side-navbar">
+            <div class="left-side-navbar">
 
-                    <div class="icon-container">
-                        <a href="index.html">
-                            <h2 class="icon ">Food</h2>
-                            <h2 class="icon icon-blue">delivery</h2>
-                        </a>
-                    </div>
-
-                    <div class="search-input-container">
-                            <input placeholder="Search" type="text">
-                        <a href="#">
-                            <img src="images/searchIcon.png" alt="">
-                        </a>
-                    </div>
+                <div class="icon-container">
+                    <a href="index.html">
+                        <h2 class="icon ">Food</h2>
+                        <h2 class="icon icon-blue">delivery</h2>
+                    </a>
                 </div>
 
-                <div class="right-side-navbar">
-                    <a id="restaurants" href="products.html">Restaurants</a>
-                    <a id="deals" href="#">Deals</a>
-                    <div class="divider"></div>
-                    <a id="my-order" href="#">My orders</a>
+                <div class="search-input-container">
+                    <input placeholder="Search" type="text">
                     <a href="#">
-                        <div class="cart-button">
-                            <img src="images/shoppingCartIcon.png" alt="">
-                        </div>
+                        <img src="images/searchIcon.png" alt="">
                     </a>
-                    <a href="#">
-                        <div class="profile-button">
+                </div>
+            </div>
+
+            <div class="right-side-navbar">
+                <a id="restaurants" href="products.html">Restaurants</a>
+                <a id="deals" href="#">Deals</a>
+                <div class="divider"></div>
+                <a id="my-order" href="#">My orders</a>
+                <a href="#">
+                    <div class="cart-button">
+                        <img src="images/shoppingCartIcon.png" alt="">
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="profile-button">
+                        <img src="images/profilePicture.png" alt="">
+                    </div>
+                </a>
+                <div id="divider-none" class="divider"></div>
+                <a href="#">
+                    <div class="menu-button">
+                        <div class="button-line-icon"></div>
+                        <div class="button-line-icon"></div>
+                        <div class="button-line-icon"></div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </nav>
+</header>
+<main>
+    <section class="profile-settings-container">
+        <h1>Settings</h1>
+        <a href="#">
+            <div class="profile-setting">
+                <div class="profile-setting-image">
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M16.6666 17.5V15.8333C16.6666 14.9493 16.3155 14.1014 15.6903 13.4763C15.0652 12.8512 14.2174 12.5 13.3333 12.5H6.66665C5.78259 12.5 4.93474 12.8512 4.30962 13.4763C3.6845 14.1014 3.33331 14.9493 3.33331 15.8333V17.5" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M9.99996 9.16667C11.8409 9.16667 13.3333 7.67428 13.3333 5.83333C13.3333 3.99238 11.8409 2.5 9.99996 2.5C8.15901 2.5 6.66663 3.99238 6.66663 5.83333C6.66663 7.67428 8.15901 9.16667 9.99996 9.16667Z" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
+                <div>
+                    <h4>Account</h4>
+                    <span>Personal information</span>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="profile-setting">
+                <div class="profile-setting-image">
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M17.5 8.33333C17.5 14.1667 10 19.1667 10 19.1667C10 19.1667 2.5 14.1667 2.5 8.33333C2.5 6.3442 3.29018 4.43655 4.6967 3.03003C6.10322 1.6235 8.01088 0.833328 10 0.833328C11.9891 0.833328 13.8968 1.6235 15.3033 3.03003C16.7098 4.43655 17.5 6.3442 17.5 8.33333Z" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M10 10.8333C11.3807 10.8333 12.5 9.71404 12.5 8.33333C12.5 6.95262 11.3807 5.83333 10 5.83333C8.61929 5.83333 7.5 6.95262 7.5 8.33333C7.5 9.71404 8.61929 10.8333 10 10.8333Z" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
+                <div>
+                    <h4>Address</h4>
+                    <span>Shippings addresses</span>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="profile-setting">
+                <div class="profile-setting-image">
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M17.5 3.33334H2.49998C1.5795 3.33334 0.833313 4.07953 0.833313 5V15C0.833313 15.9205 1.5795 16.6667 2.49998 16.6667H17.5C18.4205 16.6667 19.1666 15.9205 19.1666 15V5C19.1666 4.07953 18.4205 3.33334 17.5 3.33334Z"  stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M0.833313 8.33334H19.1666"  stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
+                <div>
+                    <h4>Payment method</h4>
+                    <span>Connected credit cards</span>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="profile-setting">
+                <div class="profile-setting-image">
+                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M9.99998 18.3333C9.99998 18.3333 16.6666 15 16.6666 10V4.16667L9.99998 1.66667L3.33331 4.16667V10C3.33331 15 9.99998 18.3333 9.99998 18.3333Z" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </div>
+                <div>
+                    <h4>Security</h4>
+                    <span>Password, 2FA</span>
+                </div>
+            </div>
+        </a>
+    </section>
+    <section class="account-information-container">
+        <form action="">
+            <div class="account-information">
+
+                <h3>Personal information</h3>
+                <div class="profile-image-container">
+                    <div>
+                        <span>Avatar</span>
+                        <div class="profile-image">
                             <img src="images/profilePicture.png" alt="">
                         </div>
-                    </a>
-                    <div id="divider-none" class="divider"></div>
-                    <a href="#">
-                        <div class="menu-button">
-                            <div class="button-line-icon"></div>
-                            <div class="button-line-icon"></div>
-                            <div class="button-line-icon"></div>
+                    </div>
+                    <button id="change-button" type="button">Change</button>
+                    <button id="remove-button" type="button">Remove</button>
+                </div>
+                <div class="account-inputs-container">
+                    <div>
+                        <label for="first-name">First name</label>
+                        <input value="Jane" id="first-name" type="text" minlength="2" maxlength="50" required>
+                    </div>
+                    <div>
+                        <label for="last-name">Last name</label>
+                        <input value="Robertson" id="last-name" type="text" minlength="2" maxlength="50" required>
+                    </div>
+                    <div>
+                        <label for="email">Email</label>
+                        <input value="jane.robertson@example.com" id="email" type="email" required>
+                    </div>
+                    <div>
+                        <label for="phone-number">Phone number</label>
+                        <input value="(217) 555-0113" id="phone-number" type="tel" minlength="8" required>
+                    </div>
+                </div>
+                <div class="email-notifications-container">
+                    <h3>Email notifications</h3>
+                    <div class="email-notifications-options">
+                        <div>
+                            <label for="new-deals">New deals</label>
+                            <input id="new-deals" type="checkbox">
                         </div>
-                    </a>
+                        <div>
+                            <label for="password-changes">Password changes</label>
+                            <input id="password-changes" type="checkbox">
+                        </div>
+                        <div>
+                            <label for="new-restaurants">New restaurants</label>
+                            <input id="new-restaurants" type="checkbox">
+                        </div>
+                        <div>
+                            <label for="special-offers">Special offers</label>
+                            <input id="special-offers" type="checkbox">
+                        </div>
+                        <div>
+                            <label for="order-statuses">Order statuses</label>
+                            <input id="order-statuses" type="checkbox">
+                        </div>
+                        <div>
+                            <label for="news-letter">News letter</label>
+                            <input id="news-letter" type="checkbox">
+                        </div>
+                    </div>
                 </div>
             </div>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <div class="profile-settings-container">
-                <h1>Settings</h1>
-                <a  href="#">
-                    <div class="profile-setting">
-                        <div class="profile-setting-image">
-                            <img src="images/settingsIcons/account.png" alt="">
-                        </div>
-                        <div>
-                            <h4>Account</h4>
-                            <span>Personal information</span>
-                        </div>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="profile-setting">
-                        <div class="profile-setting-image">
-                            <img src="images/settingsIcons/addres.png" alt="">
-                        </div>
-                        <div>
-                            <h4>Address</h4>
-                            <span>Shippings addresses</span>
-                        </div>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="profile-setting">
-                        <div class="profile-setting-image">
-                            <img src="images/settingsIcons/payment.png" alt="">
-                        </div>
-                        <div>
-                            <h4>Payment method</h4>
-                            <span>Connected credit cards</span>
-                        </div>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="profile-setting">
-                        <div class="profile-setting-image">
-                            <img src="images/settingsIcons/security.png" alt="">
-                        </div>
-                        <div>
-                            <h4>Security</h4>
-                            <span>Password, 2FA</span>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="account-information-container">
-                <div class="account-information">
-                    <h3>Personal information</h3>
-                    <form action="">
-                        <div class="profile-image-container">
-                            <div>
-                                <span>Avatar</span>
-                                <div class="profile-image">
-                                    <img src="images/profilePicture.png" alt="">
-                                </div>
-                            </div>
-                            <button id="change-button" type="button">Change</button>
-                            <button id="remove-button" type="button">Remove</button>
-                        </div>
-                        <div class="account-inputs-container">
-                            <div>
-                                <label for="first-name">First name</label>
-                                <input value="Jane" id="first-name" type="text">
-                            </div>
-                            <div>
-                                <label for="last-name">Last name</label>
-                                <input value="Robertson" id="last-name" type="text">
-                            </div>
-                            <div>
-                                <label for="email">Email</label>
-                                <input value="jane.robertson@example.com" id="email" type="email">
-                            </div>
-                            <div>
-                                <label for="phone-number">Phone number</label>
-                                <input value="(217) 555-0113" id="phone-number" type="tel">
-                            </div>
-                        </div>
-                        <div class="email-notifications-container">
-                            <h3>Email notifications</h3>
-                            <div class="email-notifications-options">
-                                <div>
-                                    <label for="new-deals">New deals</label>
-                                    <input id="new-deals" type="checkbox">
-                                </div>
-                                <div>
-                                    <label for="password-changes">Password changes</label>
-                                    <input id="password-changes" type="checkbox">
-                                </div>
-                                <div>
-                                    <label for="new-restaurants">New restaurants</label>
-                                    <input id="new-restaurants" type="checkbox">
-                                </div>
-                                <div>
-                                    <label for="special-offers">Special offers</label>
-                                    <input id="special-offers" type="checkbox">
-                                </div>
-                                <div>
-                                    <label for="order-statuses">Order statuses</label>
-                                    <input id="order-statuses" type="checkbox">
-                                </div>
-                                <div>
-                                    <label for="news-letter">News letter</label>
-                                    <input id="news-letter" type="checkbox">
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                </div>
 
-                <div class="account-interactions-container">
-                    <div>
-                        <button id="log-out" type="submit">Log out</button>
-                    </div>
-                    <div>
-                        <button id="discard-changes" type="submit">Discard Changes</button>
-                        <button id="save-changes" type="submit">Save changes</button>
-                    </div>
+            <div class="account-interactions-container">
+                <div>
+                    <button id="log-out">
+                        <a id="log-out-button" href="index.html">
+                            Log out
+                        </a>
+                    </button>
+                </div>
+                <div>
+                    <button id="discard-changes" type="reset">Discard Changes</button>
+                    <button id="save-changes" type="submit">Save changes</button>
                 </div>
             </div>
-        </section>
-    </main>
+        </form>
+    </section>
+</main>
 </body>
 </html>
